Security/Network Policy/network-policy-pod-db-egress.yaml
#Network policy with pod and db with egress
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
   matchLabels:
     role: db
  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
         macthLabels:
            name: api-pod
    ports:
    - protocol: TCP
      port: 3306
   egress:
   - to:
     - ipBlock:
          cidr: 192.168.5.10/32
     ports:
     - protocol: TCP
       port: 80
